--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,5 +1,9 @@
-body {
-    background-color: radial-gradient: #000000, #0000003e, #3f8cff;
+
+  .template {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(63, 140, 255, 1) 100%);
+    max-width: 100%;
+    height: auto;
   }
   
   .registration-form {
@@ -17,7 +21,7 @@ body {
     border-top-right-radius: 30px;
     margin-bottom: auto;
     margin-top: auto;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+    box-shadow: 0px 2px 10px rgba(3, 57, 232, 0.075);
   }
 
   .form-group button {
@@ -43,7 +47,7 @@ body {
 }
   .registration-form .form-icon regis {
     text-align: center;
-    background-color: #5891ff;
+    background-color: #c5c8d0;
     border-radius: 50%;
     font-size: 40px;
     color: white;
@@ -71,9 +75,9 @@ body {
     padding: 10px 20px;
     font-size: 50px;
     font-weight: bold;
-    background-color: #5791ff;
+    background-color: #e0e7e0;
     border: none;
-    color: #3F8CFF;
+    color: #0b0b0b;
     margin-top: 20px;
   }
   
@@ -86,7 +90,7 @@ body {
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     color: #9fadca;
-    border-top: 1px solid #3F8CFF;
+    border-top: 1px solid #ffac3f;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
   }
   
