--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -4,6 +4,8 @@
     background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(63, 140, 255, 1) 100%);
     max-width: 100%;
     height: auto;
+    background-position: center;
+    background-repeat: no-repeat;
   }
   
   .registration-form {
