--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 
 body {
     background-image: url(/assets/background.png);
@@ -6,7 +9,11 @@ body {
     background: cover;
     background-position: center;
     background-repeat: no-repeat;
-    font-family: 'Poppins', sans-serif;
+}
+
+.container {
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
 }
 
 #bungkus {
@@ -14,11 +21,13 @@ body {
     margin: 30px;
     /* background-image: url(/assets/background.png); */
     background-image: linear-gradient(0, #A7E2F7 27px, #8FDAF9 39%);
+    font-family: 'Open Sans', sans-serif;
 }
 
 #bungkus2 {
     border: none;
     margin: 30px;
+    font-family: 'poppin', sans-serif;
 }
 
 #tulisan {
@@ -33,4 +42,5 @@ body {
 
 .card-text{
     text-align: justify;
+    font-family: 'Open Sans', sans-serif;
 }
