--- a/CSS/Detail.css
+++ b/CSS/Detail.css
@@ -1,47 +1,16 @@
-body
-{
-    margin: 0px;
-    padding: 0px;
-    background-color: #ffffff;
-}
-ul
-{
-    list-style: none;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+.card-title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
 }
 
-a
-{
-    text-decoration: none;
+#title{
+    font-family: 'Poppins', sans-serif;
+    font-size: 17px;
 }
-
-.picture
-{
-    width: 100%;
-    height: 30vh;
-    position:absolute;
-    display: flex;
-    transform:none;
-}
-
-li {
-    display: inline;
-
-}
-
-span {
-    display: block;
-
-}
-
-
-.tahapan
-{
-    align-items:end
-}
-
-.tahapan-desc
-{
+.card-text {
+    font-family: 'Poppins', sans-serif;
+    font-size: 13px;
     text-align: justify;
-    margin: 5% 5%;
-    top: auto;
 }
