--- a/CSS/autentikasi.css
+++ b/CSS/autentikasi.css
@@ -4,3 +4,11 @@ body {
   font-family: "Josefin Sans", sans-serif;
   font-family: "Raleway", sans-serif;
 }
+
+.template {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(63, 140, 255, 1) 100%);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
