--- a/CSS/autentikasi.css
+++ b/CSS/autentikasi.css
@@ -21,9 +21,22 @@ body {
 .wrapper {
   margin-inline: auto;
   width: 100%;
-  text-align: center;
   width: min(900px, 100% - 3rem);
-  /* margin-left: 150px;
-  margin-right: 150px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.kotak-kecil {
+  width: 40px;
+  height: 50px;
+  /* background-color: dodgerblue; */
+  border-radius: 6px;
+
+}
+
+.kotak-kecil input {
+  text-align: center;
 }
 
