--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -28,13 +28,18 @@
 
   .form-group button {
     background-color: #3F8CFF;
-    font-display: ;
+    /* font-display: ; */
     width: 150px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
     justify-content: center;
     align-items: center;
+  }
+
+  .form-group button a {
+    text-decoration: none;
+    color: #0b0b0b;
   }
   
   .picture {
@@ -65,6 +70,7 @@
     color: #3F8CFF;
     border-color: #3F8CFF;
 }
+
   
   .registration-form .item {
     border-radius: 10px;
