--- a/CSS/a&b.css
+++ b/CSS/a&b.css
@@ -8,7 +8,7 @@ body {
 
 .input-group {
     margin-top: 8%;
-    margin-left: 25%;
+    margin-left: 30%;
 }
 
 #icon {
@@ -23,4 +23,18 @@ body {
     width: 700px;
     height: 58px;
     border-radius: 50px;
+}
+
+.card {
+    margin: 3%;
+    background: none;
+    border: none;
+}
+
+.card-body {
+    text-align: justify;
+}
+
+#tulisan {
+    color: blue;
 }
