--- a/Detail Video/DetVid.css
+++ b/Detail Video/DetVid.css
@@ -28,8 +28,8 @@
   height: 214px;
 }
 
-.card {
-  margin: 2%;
+.card{
+  margin: 5%;
   background: none;
   border: none;
 }
@@ -204,4 +204,91 @@
   font-size: var(--font-size-base);
   color: var(--color-white);
   font-family: var(--logo);
+}
+
+/* pop up profile */
+#btnprofile {
+  color: white;
+  background-color: #3F8CFF;
+  border: none;
+}
+
+.modal-content{
+  border-radius: 20px;
+  margin-left: 115%;
+  margin-bottom: 10px;
+  width: 307px;
+  height: 357px;
+}
+.modal-header {
+  background-color: #76D2F7;
+  border-radius: 20px;
+  width: 307px;
+  height: 357px;
+}
+
+#gambarmr {
+  margin-left: 80px;
+  margin-bottom: 20px;
+  width: 97px;
+  height: 99px;
+}
+
+.selamat-datang {
+  margin: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 60px;
+}
+
+.selamat-datang2 {
+  margin: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 95px;
+}
+
+.dua {
+  border: 1px solid white;
+}
+
+#keluar {
+  margin-left: 86%;
+  width: 40px;
+  height: 40px;
+  border: none;
+}
+
+.kelola button {
+  border: 4px solid white;
+  border-radius: 5px;
+  background-color: #3F8CFF;
+  width: 273px;
+  height: 45px;
+}
+
+#text1 {
+  color: white;
+  text-decoration: none;
+  margin-right: 75px;
+  margin-left: 20px;
+}
+
+#text2 {
+  color: white;
+  text-decoration: none;
+  margin-right: 150px;
+  margin-left: 20px;
+}
+
+#icon {
+  width: 32px;
+  height: 30px;
+  color: white;
+}
+
+#icon2 {
+  width: 32px;
+  height: 30px;
+  color: white;
 }
