--- a/CSS/autentikasi.css
+++ b/CSS/autentikasi.css
@@ -40,3 +40,11 @@ body {
   text-align: center;
 }
 
+/* .buttonsend {
+  color: aliceblue;
+  text-decoration: none;
+  padding: 10px 15px 10px 15px;
+  background-color: blue;
+  border-radius: 15%;
+} */
+
