--- a/CSS/marketplace.css
+++ b/CSS/marketplace.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap');
 
 body {
-    font-family: 'Raleway', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -129,6 +128,7 @@ main {
     text-align: center;
     width: 106px;
     height: auto;
+    font-family: 'Open Sans', sans-serif;
 }
 
 li a {
@@ -140,6 +140,7 @@ h3 {
     font-size: 20px;
     font-weight: bold;
     margin-top: 15px;
+    font-family: 'Raleway', sans-serif;
 }
 
 hr {
@@ -152,8 +153,9 @@ hr {
 }
 
 .card-title {
-    font-size: 14px;
+    font-size: 15px;
     text-align: center;
+    font-family: 'Raleway', sans-serif;
 }
 
 .card-text {
@@ -171,4 +173,70 @@ hr {
     width: 194px;
     height: 60px;
     margin-left: 20px;
+    border: none;
+}
+
+.btn-primary{
+    background-color: #3F8CFF;
+}
+
+.input-group{
+    margin-bottom: 20px;
+}
+
+.form-outline {
+    width: 17%;
+}
+
+.gambar3{
+    width: 15px;
+    height: 15px;
+    margin-bottom: 5px;
+}
+
+#container2 {
+    margin-top: 50px;
+    border: none;
+    width: 102%;
+    padding: 30px;
+    background-image: radial-gradient(circle at -19.64% 37.72%, #76D2F7 0, #76D2F7 25%, #76D2F7 50%, #5BB2BC 75%, #5BB2BC 100%);
+}
+
+.kotak3 {
+    padding: 41px;
+    width: 40%;
+    margin-left: 80px;
+}
+
+.kotak4 {
+    padding: 30px;
+    width: 50%;
+}
+
+.but1{
+    margin: 5px;
+    width: 441px;
+    height: 45px;
+    border-radius: 10px;
+    border: none;
+    font-family: 'Raleway', sans-serif;
+}
+
+.but2{
+    margin: 5px;
+    width: 441px;
+    height: 45px;
+    border-radius: 10px;
+    border: none;
+    background-color: #3F8CFF;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.text3 {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.text4 {
+    font-size: 15px;
 }
