--- a/CSS/DetailtP.css
+++ b/CSS/DetailtP.css
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 /* pop up profile */
 #btnprofile {
     color: white;
@@ -84,4 +89,28 @@
     width: 32px;
     height: 30px;
     color: white;
+}
+
+/* scearh */
+.input-group{
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-bottom: 20px;
+}
+
+.form-outline {
+    width: 80%;
+}
+
+.gambar3{
+    width: 15px;
+    height: 15px;
+    margin-bottom: 5px;
+}
+
+#icontop{
+    margin-left: 50px;
+    margin-top: 5px;
+    width: 30px;
+    height: 30px;
 }
