--- a/CSS/marketplace.css
+++ b/CSS/marketplace.css
@@ -240,3 +240,11 @@ hr {
 .text4 {
     font-size: 15px;
 }
+
+#Beli{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+}
